Fix text overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -100,7 +100,7 @@ a {
 }
 
 .card-text {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .form-control,
